--- a/webapp/src/Pages/ProjectSetup/ProjectSetup.css
+++ b/webapp/src/Pages/ProjectSetup/ProjectSetup.css
@@ -1,122 +1,24 @@
-.criteria-page {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 30px;
+.project__setup-outer__container {
+
 }
 
-.criteria-container {
-    display: flex;
-    align-items: center;
-    gap: 20px;
-    margin-bottom: 20px;
-    width: 100%;
-    justify-content: space-evenly;
-}
-
-.criteria-selection, .criteria-explanations {
-    display: flex;
-    flex-direction: column;
-    width: 75%;
-    align-items: center;
-}
-
-.criteria-group, .explanation-group {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin-bottom: 20px;
+.select-decision__makers {
+    flex: 1;
     width: 80%;
 }
 
-.criteria-label {
-    font-size: 1rem;
-    font-weight: bold;
-    margin-bottom: 10px;
-    color: #808080;
-}
-
-.criteria-dropdown {
-    flex: 1;
-}
-
-.explanation-editor {
-    flex: 2;
-}
-
-.button-save, .button-edit, .button-delete, .button-add {
-    border: none;
-    border-radius: 5px;
-    background-color: transparent;
-    cursor: pointer;
-}
-
-.button-save img, .button-edit img, .button-delete img{
-    width: 24px;
-    height: 24px;
-}
-
-.button-save:hover, .button-edit:hover, .button-delete:hover {
-    transform: scale(1.15);
-    transition: transform 0.2s ease-in-out;
-}
-
-.button-add {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    width: fit-content;
-    padding: 8px 16px 8px 24px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
+.project-name__input input {
+    padding: 8px 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
     font-size: 16px;
-    transition: background-color 0.2s;
+    width: 80%;
+    box-sizing: border-box;
 }
 
-.button-add img, .button-send img {
-    width: 24px;
-    height: 24px;
-    margin-left: 8px;
-    filter: invert(100%);
+.project-name__input input:focus {
+    outline: none;
+    border-color: #2684FF;
+    box-shadow: 0 0 0 1px #2684FF;
 }
 
-.button-add:hover {
-    background-color: #0056b3;
-}
-
-.button-send {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    width: fit-content;
-    padding: 8px 16px 8px 24px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    font-size: 16px;
-    transition: background-color 0.2s;
-}
-
-.button-send:hover {
-    background-color: #0056b3;
-}
-
-.button-send:disabled {
-    background-color: #cccccc;
-    cursor: not-allowed;
-}
-
-.button-send:disabled img {
-    opacity: 0.5;
-}
-
-@media (max-width: 600px) {
-    .criteria-container {
-        flex-direction: column;
-    }
-}
