--- a/webapp/src/Pages/ProjectSetup/ProjectSetup.css
+++ b/webapp/src/Pages/ProjectSetup/ProjectSetup.css
@@ -1,13 +1,41 @@
 .project__setup-outer__container {
-
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
-.select-decision__makers {
-    flex: 1;
+.project__setup-inner__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    max-width: 800px;
+    padding: 24px;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    margin-top: 24px;
+}
+
+.project__setup-inner__container h2 {
+    margin-bottom: 24px;
+    /* Update font etc. */
+}
+
+.project__setup-inner__container p {
+    margin-bottom: 18px;
+    /* Update font etc. */
+}
+
+.project-name__group {
+    display: flex;
     width: 80%;
+    justify-content: center;
+    margin-bottom: 24px;
 }
 
-.project-name__input input {
+.project-name__group input {
     padding: 8px 12px;
     border: 1px solid #ccc;
     border-radius: 4px;
@@ -16,9 +44,32 @@
     box-sizing: border-box;
 }
 
-.project-name__input input:focus {
+.project-name__group input:focus {
     outline: none;
     border-color: #2684FF;
     box-shadow: 0 0 0 1px #2684FF;
 }
 
+.project-stakeholder__group {
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 24px;
+}
+
+.select__stakeholders {
+    width: 80%;
+}
+
+.project-decision-maker__group {
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 36px;
+}
+
+.select__decision-makers {
+    width: 80%;
+}
