--- a/webapp/src/Pages/ProjectSetup/CriteriaDefinition/CriteriaDefinition.css
+++ b/webapp/src/Pages/ProjectSetup/CriteriaDefinition/CriteriaDefinition.css
@@ -21,12 +21,23 @@
     align-items: center;
 }
 
+.explanation-container {
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
 .criteria-group, .explanation-group {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     margin-bottom: 20px;
     width: 80%;
+}
+
+.criteria-group {
+    width: 50%;
 }
 
 .criteria-label {
@@ -54,6 +65,7 @@
 .button-save img, .button-edit img, .button-delete img{
     width: 24px;
     height: 24px;
+    margin-top: 10px;
 }
 
 .button-save:hover, .button-edit:hover, .button-delete:hover {
