--- a/webapp/src/Pages/CriteriaScoring/CriteriaScoring.css
+++ b/webapp/src/Pages/CriteriaScoring/CriteriaScoring.css
@@ -1,15 +1,25 @@
 .criteria-scoring__outer-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    display: flex;
     gap: 20px;
 }
 
 .criteria-scoring__container {
+    flex: 1;
+    overflow-y: auto;
     padding: 20px;
 }
 
 .criteria-scoring__container > div {
     margin-bottom: 20px;
+}
+
+.documents__container {
+    flex: 1;
+    gap: 20px;
+    overflow-y: auto;
+    position: sticky;
+    top: 0;
+    height: calc(100vh - 20px - 44px);
 }
 
 h3 {
