--- a/webapp/src/Components/CriteriaScoreInput/CriteriaScoreInput.css
+++ b/webapp/src/Components/CriteriaScoreInput/CriteriaScoreInput.css
@@ -54,3 +54,17 @@
     display: block;
     background-color: #5fa4ff;
 }
+
+.invert-button {
+    background-color: #2684FF;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 1em;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 5px;
+}
