--- a/webapp/src/Pages/ProjectSummary/ProjectSummary.css
+++ b/webapp/src/Pages/ProjectSummary/ProjectSummary.css
@@ -1,8 +1,18 @@
 .project-summary__outer-container {
     display: flex;
+    margin-top: 150px;
     flex-direction: column;
-    align-items: center;
     width: 100%;
+    align-items: center;
+    justify-content: center;
     padding: 2rem 0;
     gap: 15px;
+}
+
+.bar-chart {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    height: 300px;
 }
