Add CSS styling fix

--- a/webapp/src/Pages/CriteriaScoring/CriteriaScoring.css
+++ b/webapp/src/Pages/CriteriaScoring/CriteriaScoring.css
@@ -47,7 +47,7 @@ textarea:focus {
     box-shadow: 0 0 0 1px #2684FF;
 }
 
-button {
+.button-paper-selection {
     padding: 10px 20px;
     background-color: #007bff;
     color: #fff;
@@ -56,6 +56,6 @@ button {
     cursor: pointer;
 }
 
-button:hover {
+.button-paper-selection:hover {
     background-color: #0056b3;
 }
