--- a/webapp/src/Pages/VendorResult/VendorResult.css
+++ b/webapp/src/Pages/VendorResult/VendorResult.css
@@ -3,6 +3,27 @@
     margin: 0 auto;
 }
 
+.vendor-result-header {
+    display: flex;
+    flex-direction: column;
+    width: 75%;
+    align-items: flex-start;
+    margin-bottom: 30px;
+
+    .header {
+        font-size: 2rem;
+        font-weight: bold;
+        margin-bottom: 0;
+        color: #151515;
+    }
+
+    .sub-header {
+        color: #404040;
+        font-weight: 600;
+        margin: 5px 0;
+    }
+}
+
 .vendor-list {
     list-style: none;
     padding: 0;
@@ -12,6 +33,23 @@
     display: flex;
     align-items: center;
     margin-bottom: 10px;
+}
+
+.vendor-list-header {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+    font-weight: bold;
+}
+
+.vendor-name-header {
+    flex: 1;
+    padding-left: 15px;
+}
+
+.vendor-points-header {
+    flex: 1;
+    padding-left: 50px;
 }
 
 .rank {
@@ -25,16 +63,21 @@
     justify-content: space-between;
     align-items: center;
     margin-right: 20px;
+    margin-left: 5px;
 }
 
 .actions {
     display: flex;
     align-items: center;
+    gap: 20px
+}
+
+.vendor-radio {
+    cursor: pointer;
 }
 
 .details-button {
     margin-left: 10px;
-    /* Add additional button styles */
 }
 
 .contact-button img {
@@ -66,7 +109,7 @@
     transition: background-color 0.2s;
 }
 
-.contact-button:hover {
+.contact-button:hover, .details-button:hover {
     background-color: #0056b3;
 }
 
