--- a/webapp/src/Pages/ProjectSetup/ProjectSetup.css
+++ b/webapp/src/Pages/ProjectSetup/ProjectSetup.css
@@ -18,14 +18,33 @@
     margin-top: 24px;
 }
 
-.project__setup-inner__container h2 {
-    margin-bottom: 24px;
-    /* Update font etc. */
+.project__setup-header, .project__setup-sub__header {
+    display: flex;
+    width: 80%;
+    justify-content: center;
 }
 
-.project__setup-inner__container p {
-    margin-bottom: 18px;
-    /* Update font etc. */
+.project__setup-header__inner, .project__setup-sub__header__inner {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 80%;
+}
+
+.project__setup-inner__container h1 {
+    font-size: 2rem;
+    font-weight: bold;
+    margin-bottom: 40px;
+    color: #151515;
+}
+
+.project__setup-sub__header__inner h2 {
+    font-size: 1.25rem;
+    color: #404040;
+    font-weight: 500;
+    margin: 10px 0;
+    width: 80%;
+    justify-content: flex-start;
 }
 
 .project-name__group {
