--- a/webapp/src/Components/CriteriaScoreInput/CriteriaScoreInput.css
+++ b/webapp/src/Components/CriteriaScoreInput/CriteriaScoreInput.css
@@ -3,16 +3,19 @@
 .criteria-score__input__container {
     margin-bottom: 20px;
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
 }
 
 .radio-button__container {
     position: relative;
     padding-left: 35px;
     margin-bottom: 12px;
+    width: fit-content;
     cursor: pointer;
     font-size: 1em;
-    display: inline-flex;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
     align-items: center;
 }
 
@@ -50,7 +53,7 @@
     display: block;
 }
 
-.radio-button__container:hover input ~ .checkmark:after {
+.radio-button__container:hover input ~ .checkmark {
     display: block;
     background-color: #5fa4ff;
 }
@@ -67,4 +70,15 @@
     margin: 4px 2px;
     cursor: pointer;
     border-radius: 5px;
+}
+
+.bold-words {
+    font-weight: bold;
+    font-style: italic;
+    margin-right: -3px;
+}
+
+.score-label {
+    font-size: 0.75em;
+    color: #ccc;
 }
