--- a/webapp/src/Pages/CriteriaWeighting/CriteriaWeighting.css
+++ b/webapp/src/Pages/CriteriaWeighting/CriteriaWeighting.css
@@ -13,5 +13,69 @@
     .sub-header {
         color: #404040;
         font-weight: 600;
+        margin-left: 20px;
+    }
+}
+
+.criteria-name {
+    margin-left: 20px;
+}
+
+.criteria-criteria-group {
+    display: flex;
+    flex-direction: column;
+    margin-left: 40px;
+}
+
+.criteria-criteria-section {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 50px;
+}
+
+.criteria-criteria-group .criteria-criteria-section:is(:last-child) {
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+}
+
+.query-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 20px;
+
+    .invert-button {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+        padding: 10px;
+        border-radius: 5px;
+        background-color: #2684FF;
+        color: white;
+        font-size: 1rem;
+        font-weight: 500;
+        cursor: pointer;
+        transition: background-color 0.3s;
+
+        &:hover {
+            background-color: #0056b3;
+        }
+
+        .logo {
+            filter: invert(100%);
+        }
+    }
+
+    .text {
+        font-size: 1rem;
+        font-weight: 500;
+        color: #404040;
+
+        .bold {
+            color: #151515;
+        }
     }
 }
