--- a/webapp/src/Pages/CriteriaScoring/CriteriaScoringConflicts/CriteriaScoringConflicts.css
+++ b/webapp/src/Pages/CriteriaScoring/CriteriaScoringConflicts/CriteriaScoringConflicts.css
@@ -5,3 +5,47 @@
     margin-top: 1em;
     margin-bottom: 1em;
 }
+
+.inconsistency-indicator {
+    display: flex;
+    align-items: center;
+    color: #D8000C;
+    background-color: #FFD2D2;
+    padding: 10px;
+    margin-top: 10px;
+    border-left: 5px solid #D8000C;
+    font-size: 0.9em;
+}
+
+.inconsistency-indicator img {
+    margin-right: 10px;
+    width: 24px;
+}
+
+.tooltip {
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted black;
+}
+
+.tooltip .tooltipText {
+    visibility: hidden;
+    width: fit-content;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 150%;
+    right: 0;
+}
+
+.tooltip:hover .tooltipText {
+    visibility: visible;
+}
+
+.warning-icon {
+
+}
